[gd_scene load_steps=16 format=3 uid="uid://b07lvdjuhw08t"]

[ext_resource type="PackedScene" uid="uid://kkt6g2ery6vj" path="res://Scenes/Units/unit_base.tscn" id="1_5cv37"]
[ext_resource type="Script" path="res://Scenes/Units/unit_tomato_projectile.gd" id="2_p6b7t"]
[ext_resource type="Texture2D" uid="uid://1yaupgrvy6mm" path="res://Assets/Images/shadow.png" id="3_1s2hc"]
[ext_resource type="Resource" uid="uid://jnj34j5us7tw" path="res://Scenes/Units/Combat/Stats/stats_tomato_projectile.tres" id="3_vn8q8"]
[ext_resource type="PackedScene" uid="uid://bhp551sabqfag" path="res://Scenes/Units/System/team_sprite.tscn" id="4_soalr"]
[ext_resource type="PackedScene" uid="uid://civ0qmljlf0kk" path="res://Scenes/Important/googley_eyes_pair.tscn" id="5_efs1c"]
[ext_resource type="Shader" path="res://Code/Shaders/unit_sprite.gdshader" id="6_n8dp6"]
[ext_resource type="Texture2D" uid="uid://dlast8lm348f0" path="res://Assets/mob/tomatoprojectile_green.png" id="7_i08sh"]
[ext_resource type="Texture2D" uid="uid://d33ae43o7hvtl" path="res://Assets/mob/tomatosplat_green.png" id="8_k0ivb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hncq6"]
render_priority = -1
blend_mode = 3
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("3_1s2hc")
texture_filter = 0
texture_repeat = false

[sub_resource type="PlaneMesh" id="PlaneMesh_0vjf4"]
material = SubResource("StandardMaterial3D_hncq6")
size = Vector2(3, 1.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oggxo"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_n8dp6")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/roughness = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/texture_albedo = ExtResource("7_i08sh")

[sub_resource type="QuadMesh" id="QuadMesh_t1s07"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_oggxo")
size = Vector2(3.13, 2.91)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2t7nb"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_n8dp6")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/roughness = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/texture_albedo = ExtResource("8_k0ivb")

[sub_resource type="QuadMesh" id="QuadMesh_yefg5"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_2t7nb")
size = Vector2(3.13, 2.91)

[node name="UnitTomatoProjectile" instance=ExtResource("1_5cv37")]
script = ExtResource("2_p6b7t")
spin = 6.28319
unit_type = 4
stat_block = ExtResource("3_vn8q8")
unit_move_type = 1

[node name="Shadow" parent="LaneOffset" index="0"]
mesh = SubResource("PlaneMesh_0vjf4")

[node name="BodyTransform" type="Node3D" parent="LaneOffset/FacingRotation/Sprites" index="0"]
unique_name_in_owner = true

[node name="TomatoProjectileSprite" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="0" instance=ExtResource("4_soalr")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.175295, 0.134842, 0)
asset_var_name = "tomato_projectile_sprite"

[node name="dummy" parent="LaneOffset/FacingRotation/Sprites/BodyTransform/TomatoProjectileSprite" index="0"]
mesh = SubResource("QuadMesh_t1s07")

[node name="TomatoSplatSprite" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="1" instance=ExtResource("4_soalr")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.34465e-07, -2.83122e-07, 0)
visible = false
asset_var_name = "tomato_splat_sprite"

[node name="dummy" parent="LaneOffset/FacingRotation/Sprites/BodyTransform/TomatoSplatSprite" index="0"]
mesh = SubResource("QuadMesh_yefg5")

[node name="GoogleyEyesPair" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="2" instance=ExtResource("5_efs1c")]
unique_name_in_owner = true
transform = Transform3D(1.07, 0, 0, 0, 1.07, 0, 0, 0, 1.07, -0.00543052, 0.112046, 0)
dampening = 0.9

[node name="UnitTargeting" parent="." index="1"]
max_backward_range = 2.0
target_scan_interval = 0.05
targeting_mask = 2

[editable path="LaneOffset/FacingRotation/Sprites/BodyTransform/TomatoProjectileSprite"]
[editable path="LaneOffset/FacingRotation/Sprites/BodyTransform/TomatoSplatSprite"]
